<resources>
    <string name="app_name">Notes_app_frontend</string>
    <string name="registration_header">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_name">Имя</string>
    <string name="register_lastname">Фамилия</string>
    <string name="register_username">Имя пользователя</string>
    <string name="register_password">Пароль</string>
    <string name="sign_in_header">Войти</string>
    <string name="do_sign_in_text">Уже есть аккаунт? Войдите</string>
</resources>