<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pink">

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="414dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/registration_header"
            android:textColor="@color/white"
            android:textFontWeight="800"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/inputLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_lastname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/pink" />

        <TextView
            android:id="@+id/doSignInText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:text="@string/do_sign_in_text" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>