<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="346dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/sign_in_header"
            android:textColor="@color/pink"
            android:textFontWeight="800"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputNameSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink"
            android:ems="10"
            android:hint="@string/register_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/inputLastnameSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_in_header"
            android:background="@color/pink"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>